--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,21 +1,62 @@
-/* pretty stuff */
+/* base */
 
 body {
-    font-family: ;
-    font-size: px;
-    font-weight: ;
-    color: ;
-    background-color: white;
-    padding: 0;
+    background-color: black;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 22px;
+    color: seashell;
+    text-align: center;
+    line-height: 1.65em;
     margin: 0;
-    line-height: 1.5em;
+    padding: 0;
+}
+
+a {
+    color: seashell;
+}
+
+h2,
+h3,
+h4 {
+    margin: 0;
+    padding: 10px 0;
 }
 
 
-/* header */
+/* header module */
 
+header {
+    background-color: black;
+    height: 69px;
+    width: 100%;
+    position: fixed;
+    z-index: 10;
+    border-bottom: 1px solid seashell;
+}
 
-/* content */
+.headerflexbox {
+    min-height: 69px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.logoitem {
+    height: 50px;
+    margin: 0 0 0 10px;
+    font-size: 0;
+}
 
-/* footer */
+.logoitem img {
+    height: 50px;
+}
+
+.navflexbox {
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.navitem a {
+    padding: 20px 10px;
+    white-space: nowrap;
+}
