--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -60,3 +60,21 @@ header {
     padding: 20px 10px;
     white-space: nowrap;
 }
+
+
+/* footer */
+
+.footerstatic {
+    margin: 70px 0 0 0;
+    width: 100%;
+    max-height: 200px;
+}
+
+.footerstatic a {
+    text-decoration: none;
+}
+
+.copy {
+    margin: 20px 0 0 10px;
+    text-align: left;
+}
